--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <title> &nbsp; </title>  
+  <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title> Clay Dunston </title>  
+  <link href="https://fonts.googleapis.com/css?family=Play|Sarina" rel="stylesheet">
 </head>
 <body>
-  
+  <h1> Clay Dunston </h1>
 </body>
 </html>
