--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
             </v-flex>
           </v-layout>
 <!-- ======================================================================= -->
-          <v-layout column align-center justify-center>      
+          <v-layout row align-center justify-center>      
               <v-flex xs11 class="mt-5">
                 <v-card class="grid">
                   <v-toolbar class="primary elevation-1">
