--- a/index.html
+++ b/index.html
@@ -232,8 +232,8 @@
         <div> <v-icon light alt="Hosted" title="Hosted">mdi-cloud</v-icon> with <v-icon light alt="Love" title="Love">mdi-heart</v-icon> by </div>
         &nbsp;
         <a href="https://vuetifyjs.com/" target="_blank" alt="GitHub" title="GitHub"><v-icon light>mdi-github-circle</v-icon></a>
-        <v-spacer></v-spacer>
-        <div> &copy; {{ new Date().getFullYear() }} </div>
+        <!-- <v-spacer></v-spacer> -->
+        <!-- <div> &copy; {{ new Date().getFullYear() }} </div> -->
       </v-footer>
 <!-- ======================================================================= -->      
       <v-snackbar
