--- a/index.html
+++ b/index.html
@@ -63,7 +63,19 @@
                     </v-toolbar>
                 <v-divider class="indigo lighten-1"></v-divider>
                 <v-card-text>
-                  <ul class="mt-2">
+                  <h4 class="mt-4"> Things I know a bit about: </h4>
+                  <ul>
+                    <!-- <li> Immutible Data </li> -->
+                    <li> SPAs, PWAs, & MVC </li>
+                    <!-- <li> Server-Side Rendering </li> -->
+                    <li> Cloud Architecture, PaaS, IaaS, & SaaS </li>
+                    <li> API Design, Consumption, & Integration </li>
+                    <li> Unit Testing & Continuous Integration </li>
+                    <li> And before you ask, yes: &nbsp; <em> jQuery </em> &nbsp; <span class="grey--text text--darken-2">;)</span> </li>
+                  </ul>
+
+                  <h4 class="mt-3"> Fun Facts: </h4>
+                  <ul>
                     <li> I don't believe in tab characters. </li>
                     <li> Thoroughly enjoy the tab button. </li>
                     <li> I tend to accumulate more tabs than my browser knows what to do with. </li>
@@ -72,6 +84,7 @@
                     <!-- <li> I have a <strong>intense</strong> interest in Latin placeholder text... </li> -->
                     <li> There's nothing I love more than a good list. </li>
                   </ul>
+
                   <!-- <v-subheader> Skills </v-subheader>
                   <ul>
                     <li> API Consumption & Integration </li>
@@ -152,43 +165,6 @@
               </v-flex>
             </v-layout>
 <!-- ======================================================================= -->
-          <v-layout row align-center justify-center>
-            <v-flex xs12 sm6  class="mt-5">
-              <v-card>
-                <v-toolbar class="primary">
-                  <v-toolbar-title class="secondary--text"> Leave a Message </v-toolbar-title>
-                </v-toolbar>
-                <v-card-text>
-                  <v-text-field
-                    class="mt-3"
-                    label="Your Name"
-                    v-model="contactName">
-                  </v-text-field>
-                  <v-text-field
-                    label="Your Email"
-                    type="email"
-                    v-model="contactEmail">
-                    <!-- :rules="[rules.email]"> -->
-                  </v-text-field>
-                  <v-text-field
-                    label="Subject"
-                    hint="You can leave this field blank if you'd like"
-                    v-model="contactSubject">
-                  </v-text-field>
-                  <v-text-field
-                    label="Message"
-                    v-model="contactMessage"
-                    multi-line>
-                  </v-text-field>
-                  <!-- <small>*indicates required field</small> -->
-                  <v-layout column nowrap align-center class="pb-2">  
-                    <v-btn disabled class="text-xs-center"> Send </v-btn>    
-                  </v-layout>
-                </v-card-text>
-              </v-card>
-            </v-flex>
-          </v-layout>
-<!-- ======================================================================= -->
           <v-layout row align-center justify-center>      
               <v-flex xs11 class="mt-5">
                 <v-card class="grid">
@@ -203,7 +179,7 @@
                   <v-container fluid grid-list-md class="mt-4">
                     <v-layout row wrap class="logos-container">
                         <div class="svg-container" v-for="i of logos" :key="i">
-                          <a :id="i.id" :alt="i.title" v-bind:href="i.link" target="_blank">
+                          <a :id="i.id" :alt="i.title" :title="i.title" v-bind:href="i.link" target="_blank">
                             <div v-html="i.content"></div>
                           </a>
                         </div>
@@ -214,6 +190,43 @@
               </v-flex>
             </v-layout>
         </v-container>
+<!-- ======================================================================= -->
+        <v-layout row align-center justify-center>
+          <v-flex xs12 sm6  class="mt-5">
+            <v-card>
+              <v-toolbar class="primary">
+                <v-toolbar-title class="secondary--text"> Leave a Message </v-toolbar-title>
+              </v-toolbar>
+              <v-card-text>
+                <v-text-field
+                  class="mt-3"
+                  label="Your Name"
+                  v-model="contactName">
+                </v-text-field>
+                <v-text-field
+                  label="Your Email"
+                  type="email"
+                  v-model="contactEmail">
+                  <!-- :rules="[rules.email]"> -->
+                </v-text-field>
+                <v-text-field
+                  label="Subject"
+                  hint="You can leave this field blank if you'd like"
+                  v-model="contactSubject">
+                </v-text-field>
+                <v-text-field
+                  label="Message"
+                  v-model="contactMessage"
+                  multi-line>
+                </v-text-field>
+                <!-- <small>*indicates required field</small> -->
+                <v-layout column nowrap align-center class="pb-2">  
+                  <v-btn disabled class="text-xs-center"> Send </v-btn>    
+                </v-layout>
+              </v-card-text>
+            </v-card>
+          </v-flex>
+        </v-layout>
       </main>
 <!-- ======================================================================= -->      
       <v-footer class="pa-3 mt-5 primary secondary--text">
