--- a/index.html
+++ b/index.html
@@ -47,23 +47,27 @@
       </v-toolbar>
       <main>
         <br>
-<!-- ================================================================= -->
         <v-container fluid>
-          <v-parallax class="elevation-0" :src="imgSrc">
-            <v-layout column align-center justify-center>
-              <h1 class="primary--text text-xs-center"> Clay Dunston </h1>
-            </v-layout>
-          </v-parallax>
+<!-- ================================================================= -->
+          <v-layout row align-center justify-center>
+            <v-flex xs12 s12 m12 l12 xl12>
+              <v-parallax class="elevation-0" :src="imgSrc">
+                <v-layout column align-center justify-center>
+                  <h1 class="primary--text text-xs-center"> Clay Dunston </h1>
+                </v-layout>
+              </v-parallax>
+            </v-flex>
+          </v-layout>
 <!-- ======================================================================= -->
-          <v-layout column align-center justify-center>
+          <v-layout row align-center justify-center>
             <v-flex xs12 md10 class="mt-5">
               <v-card dark>
-                  <v-toolbar class="primary">
-                      <v-toolbar-title class="secondary--text"> About Me </v-toolbar-title>
-                    </v-toolbar>
+                <v-toolbar class="primary">
+                    <v-toolbar-title class="secondary--text"> About Me </v-toolbar-title>
+                </v-toolbar>
                 <v-divider class="indigo lighten-1"></v-divider>
                 <v-card-text>
-                  <h4 class="mt-4"> Things I know a bit about: </h4>
+                  <h4 class="mt-4 white--text"> Things I know a bit about: </h4>
                   <ul>
                     <!-- <li> Immutible Data </li> -->
                     <li> SPAs, PWAs, & MVC </li>
@@ -74,7 +78,7 @@
                     <li> And before you ask, yes: &nbsp; <em> jQuery </em> &nbsp; <span class="grey--text text--darken-2">;)</span> </li>
                   </ul>
 
-                  <h4 class="mt-3"> Fun Facts: </h4>
+                  <h4 class="mt-3 white--text"> Fun Facts: </h4>
                   <ul>
                     <li> I don't believe in tab characters. </li>
                     <li> Thoroughly enjoy the tab button. </li>
@@ -148,18 +152,18 @@
                     <v-divider inset></v-divider>         
                   </v-list>
                   <v-container fluid>
-                      <v-layout justify-space-around>
-                        <span class="group">
-                            <v-btn
-                                v-for="i in accounts" :key="i"
-                                icon tag="a" :href="i.url"
-                                class="ml-3 mr-3">
-                                <v-icon medium class="white--text">
-                                  {{i.icon}}  
-                                </v-icon> 
-                            </v-btn>
-                        </span>
-                      </v-layout>
+                    <v-layout justify-space-around>
+                      <span class="group">
+                          <v-btn
+                              v-for="i in accounts" :key="i"
+                              icon tag="a" :href="i.url"
+                              class="ml-3 mr-3">
+                              <v-icon medium class="white--text">
+                                {{i.icon}}  
+                              </v-icon> 
+                          </v-btn>
+                      </span>
+                    </v-layout>
                   </v-container>
                 </v-card>
               </v-flex>
@@ -189,44 +193,44 @@
                 </v-card>
               </v-flex>
             </v-layout>
-        </v-container>
 <!-- ======================================================================= -->
-        <v-layout row align-center justify-center>
-          <v-flex xs12 sm6  class="mt-5">
-            <v-card>
-              <v-toolbar class="primary">
-                <v-toolbar-title class="secondary--text"> Leave a Message </v-toolbar-title>
-              </v-toolbar>
-              <v-card-text>
-                <v-text-field
-                  class="mt-3"
-                  label="Your Name"
-                  v-model="contactName">
-                </v-text-field>
-                <v-text-field
-                  label="Your Email"
-                  type="email"
-                  v-model="contactEmail">
-                  <!-- :rules="[rules.email]"> -->
-                </v-text-field>
-                <v-text-field
-                  label="Subject"
-                  hint="You can leave this field blank if you'd like"
-                  v-model="contactSubject">
-                </v-text-field>
-                <v-text-field
-                  label="Message"
-                  v-model="contactMessage"
-                  multi-line>
-                </v-text-field>
-                <!-- <small>*indicates required field</small> -->
-                <v-layout column nowrap align-center class="pb-2">  
-                  <v-btn disabled class="text-xs-center"> Send </v-btn>    
-                </v-layout>
-              </v-card-text>
-            </v-card>
-          </v-flex>
-        </v-layout>
+            <v-layout row align-center justify-center>
+              <v-flex xs12 sm8  class="mt-5">
+                <v-card>
+                  <v-toolbar class="primary">
+                    <v-toolbar-title class="secondary--text"> Leave a Message </v-toolbar-title>
+                  </v-toolbar>
+                  <v-card-text>
+                    <v-text-field
+                      class="mt-3"
+                      label="Your Name"
+                      v-model="contactName">
+                    </v-text-field>
+                    <v-text-field
+                      label="Your Email"
+                      type="email"
+                      v-model="contactEmail">
+                      <!-- :rules="[rules.email]"> -->
+                    </v-text-field>
+                    <v-text-field
+                      label="Subject"
+                      hint="You can leave this field blank if you'd like"
+                      v-model="contactSubject">
+                    </v-text-field>
+                    <v-text-field
+                      label="Message"
+                      v-model="contactMessage"
+                      multi-line>
+                    </v-text-field>
+                    <!-- <small>*indicates required field</small> -->
+                    <v-layout column nowrap align-center class="pb-2">  
+                      <v-btn disabled class="text-xs-center"> Send </v-btn>    
+                    </v-layout>
+                  </v-card-text>
+                </v-card>
+              </v-flex>
+            </v-layout>
+        </v-container>        
       </main>
 <!-- ======================================================================= -->      
       <v-footer class="pa-3 mt-5 primary secondary--text">
