--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <v-container fluid>
 <!-- ================================================================= -->
           <v-layout row align-center justify-center>
-            <v-flex xs12 sm12 m12 l12 xl12>
+            <v-flex xs12 sm12 m12 lg12 xl12>
               <v-parallax class="elevation-1" :src="imgSrc">
                 <v-layout column align-center justify-center>
                   <h1 class="primary--text text-xs-center"> Clay Dunston </h1>
@@ -60,7 +60,7 @@
           </v-layout>
 <!-- ======================================================================= -->
           <v-layout row align-center justify-center>
-            <v-flex xs12 md10 class="mt-5">
+            <v-flex xs12 sm12 md10 class="mt-5">
               <v-card dark class="elevation-1">
                 <v-toolbar class="primary">
                   <v-toolbar-title class="secondary--text"> About Me </v-toolbar-title>
@@ -72,8 +72,9 @@
                     <li> SPAs, PWAs, & MVC </li>
                     <!-- <li> Server-Side Rendering </li> -->
                     <li> Cloud Architecture, PaaS, IaaS, & SaaS </li>
-                    <li> API Design, Consumption, & Integration </li>
-                    <li> Unit Testing & Continuous Integration </li>
+                    <li> API design, consumption, & integration </li>
+                    <li> Unit testing & Continuous Integration </li>
+                    <li> Database design, maintenance, & integration;<br> both SQL and NoSQL </li>
                     <li> And before you ask, yes: &nbsp; <em> jQuery </em> &nbsp; <span class="grey--text text--darken-2">;)</span> </li>
                   </ul>
 
@@ -108,7 +109,7 @@
           </v-layout>
 <!-- ======================================================================= -->        
           <v-layout row align-center justify-center>
-              <v-flex xs12 md8 class="mt-5">
+              <v-flex xs12 sm12 md8 class="mt-5">
                 <v-card class="elevation-1">
                   <v-container fluid>
                     <!-- <v-layout> -->
@@ -173,7 +174,7 @@
             </v-layout>
 <!-- ======================================================================= -->
           <v-layout row align-center justify-center>      
-              <v-flex xs12 sm10 m10 l10 class="mt-5">
+              <v-flex xs12 sm12 md10 lg10 class="mt-5">
                 <v-card class="grid">
                   <v-toolbar class="primary elevation-1">
                     <v-toolbar-title class="secondary--text">Technology </v-toolbar-title>
@@ -197,7 +198,7 @@
             </v-layout>
 <!-- ======================================================================= -->
             <v-layout row align-center justify-center>
-              <v-flex xs12 sm8  class="mt-5">
+              <v-flex xs12 sm12 md8 class="mt-5">
                 <v-card>
                   <v-toolbar class="primary">
                     <v-toolbar-title class="secondary--text"> Leave a Message </v-toolbar-title>
@@ -236,9 +237,11 @@
       </main>
 <!-- ======================================================================= -->      
       <v-footer class="pa-3 mt-5 primary secondary--text">
-        <div> Made with &nbsp;</div>
-        <div  class="pt-1">
-          <a href="https://vuetifyjs.com/" target="_blank" alt="Vuetify" title="Vuetify">
+        <a href="https://vuetifyjs.com/" class="mt-1 secondary--text" target="_blank" alt="Vuetify" title="Vuetify">
+          created with &nbsp;
+        </a>
+        <!-- <div  class="pt-1"> -->
+          <a href="https://vuetifyjs.com/" class="mt-1" target="_blank" alt="Vuetify" title="Vuetify">
             <svg id="vuetify-logo" viewBox="0 0 262.5 300" height="20px" xmlns="http://www.w3.org/2000/svg">
               <polyline fill="#1697f6" points="131.67 3 71.55 3 131.67 145.1" />
               <polyline fill="#7bc6ff" points="131.67 186.81 131.67 297.1 3 45.89 70.4 45.89" />
@@ -246,7 +249,7 @@
               <polyline fill="#aeddff" points="131.67 186.81 131.67 297.1 260.34 45.89 192.94 45.89" />
             </svg>
           </a>
-        </div>
+        <!-- </div> -->
         <v-spacer></v-spacer>
         <div> <v-icon light alt="Hosted" title="Hosted">mdi-cloud</v-icon> with <v-icon light alt="Love" title="Love">mdi-heart</v-icon> by </div>
         &nbsp;
