go ahead hire me 💸

--- a/index.html
+++ b/index.html
@@ -327,7 +327,13 @@
             title      : 'Awesome Sauce',
             link       : 'https://github.com/dunstontc/awesome-sauce',
             description: ''
-          }
+          },
+          {
+            icon       : 'mdi-github-face',
+            title      : 'GitHub Pages',
+            link       : 'https://github.com/dunstontc/dunstontc.github.io',
+            description: ''
+          },
         ],
         contactName   : '',
         contactEmail  : '',
